--- a/post.html
+++ b/post.html
@@ -949,13 +949,72 @@
                           </div>
                           <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
                           <div class="comment__text">
-                            <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
+                            <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. </p>
+                            <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
                           </div>
                           <div class="comment__link"><a href="#">Ответить</a></div>
                         </div>
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="comment">
+                  <div class="comment-box">
+                    <div class="comment__avatar" style="background-image: url(img/person-photo-04.jpg)"></div>
+                    <div class="comment__content">
+                      <div class="tagbox comment__tagbox">
+                        <div class="tag">
+                          <div class="comment__nickname"><span>ДМИТРИЙ ЧЕРНЫШЕВ</span></div>
+                        </div>
+                        <div class="like-card">
+                          <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                          <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                        </div>
+                      </div>
+                      <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                      <div class="comment__text">
+                        <p>Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.</p>
+                      </div>
+                      <div class="comment__link"><a href="#">Ответить</a></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="comment">
+                  <div class="comment-box">
+                    <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
+                    <div class="comment__content">
+                      <div class="tagbox comment__tagbox">
+                        <div class="tag">
+                          <div class="comment__nickname"><span>ЕЛЕНА МАЦИНОВА</span></div>
+                        </div>
+                        <div class="like-card">
+                          <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                          <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                        </div>
+                      </div>
+                      <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                      <div class="comment__text">
+                        <p>Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!</p>
+                      </div>
+                      <div class="comment__link"><a href="#">Ответить</a></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="comment comment_special">
+                  <div class="article-autor">
+                    <p class="article-autor__left">Оставить комментарий:</p>
+                    <p>от Константина Константинопольского</p>
+                  </div>
+                </div>
+                <div class="comment">
+                  <form class="comment-form">
+                    <div class="comment-form__textareabox">
+                      <textarea class="comment-form__textarea" placeholder="Комментарий"></textarea>
+                    </div>
+                    <div class="comment-form__btnbox">
+                      <button class="button comment-form__button" type="submit">Отправить</button>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
