--- a/calendar.html
+++ b/calendar.html
@@ -965,7 +965,8 @@
               </div>
               <div class="card" id="events-06-10-2018">
                 <div class="sign-title">
-                  <p>События: 6 Ноября 2018</p>
+                  <p> События: 6 Ноября 2018 <a class="calendar__link sign-title__link" href="#event1-06-10-2018">День металурга, </a><a class="calendar__link sign-title__link" href="#event2-06-10-2018">День поедателей йогуртов, </a><a class="calendar__link sign-title__link" href="#event3-06-10-2018">День металлурга 2</a>
+                  </p>
                 </div>
               </div>
               <article class="article" id="event1-06-10-2018">
