--- a/post.html
+++ b/post.html
@@ -1014,7 +1014,7 @@
                   <div class="comment comment_special">
                     <div class="article-autor">
                       <p class="article-autor__left">Оставить комментарий:</p>
-                      <p>от Константина Константинопольского</p>
+                      <p class="article-autor__username">от Константина Константинопольского</p>
                     </div>
                   </div>
                   <div class="comment">
