--- a/calendar3.html
+++ b/calendar3.html
@@ -965,7 +965,8 @@
               </div>
               <div class="card" id="events-24-10-2018">
                 <div class="sign-title">
-                  <p>События: 24 Ноября 2018</p>
+                  <p> События: 24 Ноября 2018 <a class="calendar__link sign-title__link" href="#event1-24-10-2018">День поедателей йогуртов</a>
+                  </p>
                 </div>
               </div>
               <article class="article" id="event1-24-10-2018">
