--- a/blocks.html
+++ b/blocks.html
@@ -1113,7 +1113,7 @@
                       <div class="card__content cardThird__content">
                         <div class="tagbox">
                           <div class="tag">
-                            <button class="button button-tag">Региональные новости</button>
+                            <button class="button button-tag">Константинов Константин</button>
                           </div>
                           <div class="like-card">
                             <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
@@ -1133,7 +1133,7 @@
                       <div class="card__content cardThird__content">
                         <div class="tagbox">
                           <div class="tag">
-                            <button class="button button-tag">Региональные новости</button>
+                            <button class="button button-tag">Мацинова Елена</button>
                           </div>
                           <div class="like-card">
                             <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
@@ -1153,7 +1153,7 @@
                       <div class="card__content cardThird__content">
                         <div class="tagbox">
                           <div class="tag">
-                            <button class="button button-tag">Региональные новости</button>
+                            <button class="button button-tag">Андреевский Андрей</button>
                           </div>
                           <div class="like-card">
                             <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
@@ -1173,7 +1173,7 @@
                       <div class="card__content cardThird__content">
                         <div class="tagbox">
                           <div class="tag">
-                            <button class="button button-tag">Региональные новости</button>
+                            <button class="button button-tag">Мацинова Елена</button>
                           </div>
                           <div class="like-card">
                             <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
@@ -1193,7 +1193,7 @@
                       <div class="card__content cardThird__content">
                         <div class="tagbox">
                           <div class="tag">
-                            <button class="button button-tag">Региональные новости</button>
+                            <button class="button button-tag">Андреевский Андрей</button>
                           </div>
                           <div class="like-card">
                             <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
