--- a/calendar.html
+++ b/calendar.html
@@ -572,10 +572,8 @@
                 </div>
               </div>
               <!-- VIDGET vidget-calendar-->
-              <div class="vidget-box vidget-calendar" id="calendarVidgetBox">
-                <div class="vidget-title">КАЛЕНДАРЬ СОБЫТИЙ 
-                  <button class="event-control"><i class="icon-arrow-down"></i></button>
-                </div>
+              <div class="vidget-box vidget-calendar" id="calendarVidgetBox"><a class="vidget-title vidget-title_link" href="/calendar.html">КАЛЕНДАРЬ СОБЫТИЙ 
+                  <button class="event-control"><i class="icon-arrow-down"></i></button></a>
                 <div class="vidget-subtitle"><span>Сегодня 20 ноября 2018</span></div>
                 <div class="ui-datepicker-inline ui-datepicker ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
                   <table class="ui-datepicker-calendar">
