--- a/gallery.html
+++ b/gallery.html
@@ -1126,20 +1126,20 @@
                   <div class="cardFull-slider-wrap card-wrap cardFull-wrap">
                     <div class="cardFull-slider__item">
                       <div class="article-imgwrap">
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/article-img-02.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/block-img-01.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/block-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
                       <div class="article-imgwrap">
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/block-img-05.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/article-img-01.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/block-img-05.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/article-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
                       <div class="article-imgwrap">
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/article-img-02.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_half" style="background-image: url(img/block-img-05.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_half card__imgbox_sm" style="background-image: url(img/block-img-05.jpg)"></div>
                       </div>
                     </div>
                   </div>
@@ -1173,16 +1173,16 @@
                   <div class="cardFull-slider-wrap card-wrap cardFull-wrap">
                     <div class="cardFull-slider__item">
                       <div class="article-imgwrap">
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-01.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-02.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/block-img-01.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/article-img-01.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/block-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
                       <div class="article-imgwrap">
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-01.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-02.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/block-img-05.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/article-img-01.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
+                        <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image: url(img/block-img-05.jpg)"></div>
                       </div>
                     </div>
                   </div>
