--- a/video.html
+++ b/video.html
@@ -827,7 +827,7 @@
                   </div>
                 </div>
                 <div class="card cardFull">
-                  <div class="card__imgbox card__imgbox_xl card__videobox" style="background-image: url(img/img-full-360.png);"><img src="img/img-full-360.png"></div>
+                  <div class="card__imgbox card__imgbox_xl card__videobox" style="background-image: url(img/img-full-360.png);" data-target="#modalImgBox" data-toggle="modal" data-target-content="#image_xl"><img id="image_xl" src="img/img-full-360.png"></div>
                 </div>
               </div>
               <div class="cards">
@@ -892,19 +892,19 @@
                 <div class="card cardFull cardFull-slider">
                   <div class="cardFull-slider-wrap card-wrap cardFull-wrap">
                     <div class="cardFull-slider__item">
-                      <div class="article-imgwrap">
+                      <div class="card__imgwrap">
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/article-img-02.jpg)"></div>
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/block-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
-                      <div class="article-imgwrap">
+                      <div class="card__imgwrap">
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/block-img-05.jpg)"></div>
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/article-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
-                      <div class="article-imgwrap">
+                      <div class="card__imgwrap">
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/article-img-02.jpg)"></div>
                         <div class="card__imgbox card__imgbox_half card__videobox card__imgbox_xl" style="background-image: url(img/block-img-05.jpg)"></div>
                       </div>
@@ -939,14 +939,14 @@
                 <div class="card cardFull cardFull-slider">
                   <div class="cardFull-slider-wrap card-wrap cardFull-wrap">
                     <div class="cardFull-slider__item">
-                      <div class="article-imgwrap">
+                      <div class="card__imgwrap">
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/article-img-01.jpg)"></div>
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/block-img-01.jpg)"></div>
                       </div>
                     </div>
                     <div class="cardFull-slider__item">
-                      <div class="article-imgwrap">
+                      <div class="card__imgwrap">
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/article-img-01.jpg)"></div>
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/article-img-02.jpg)"></div>
                         <div class="card__imgbox card__imgbox_third card__videobox card__imgbox_sm" style="background-image: url(img/block-img-05.jpg)"></div>
@@ -968,30 +968,64 @@
           </div>
         </div>
       </div>
-      <!-- /.container-->
-      <!-- /.footer-->
-      <!-- jQuery-->
-      <script src="js/libs/jquery.min.js"></script>
-      <!-- jQuery-UI-->
-      <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-      <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
-      <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
-      <script src="js/libs/jquery.dotdotdot.js"></script>
-      <!-- slick-->
-      <script src="slick/slick.min.js"></script>
-      <!-- Bootstrap-->
-      <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
-      <script src="js/libs/jquery.actual.min.js"></script>
-      <!-- Валидация-->
-      <script src="js/libs/validate/jquery.validate.min.js"></script>
-      <script src="js/libs/jquery.maskedinput.min.js"></script>
-      <!-- main script-->
-      <script src="js/main/main.js?0.2.1"></script>
-      <!--if lte IE 9
-      link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
-      link(rel='stylesheet', href='ie9/css/style-ie9.css')
-      script(src='ie9/js/bootstrap-ie9.js')
-      -->
     </div>
+    <div class="modal fade modalMain" id="modalImgBox" tabindex="-1" role="dialog" aria-labelledby="modalImgBoxLabel" aria-hidden="true">
+      <div class="modal-dialog container" role="document">
+        <div class="row">
+          <div class="col-xl-12">
+            <div class="modal-content">
+              <div class="modalMain__content"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade modalMain" id="modalContentSlider" tabindex="-1" role="dialog" aria-labelledby="modalImgBoxLabel" aria-hidden="true">
+      <div class="modal-dialog container" role="document">
+        <div class="row">
+          <div class="col-xl-12">
+            <div class="modal-content">
+              <div class="preloader">
+                <div class="page-loader-circle"></div>
+              </div>
+              <div class="modalMain__content">
+                <div class="modalMain-slider">
+                  <div class="modalMain-slider-wrap" id="modalMainSliderTop"></div>
+                </div>
+                <div class="modalMain-slider-title"></div>
+                <div class="modalMain-slider modalMain-slider-bottom">
+                  <div class="modalMain-slider-wrap" id="modalMainSliderBottom"></div>
+                </div>
+                <div class="modalMain-comments"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.container-->
+    <!-- /.footer-->
+    <!-- jQuery-->
+    <script src="js/libs/jquery.min.js"></script>
+    <!-- jQuery-UI-->
+    <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
+    <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
+    <script src="js/libs/jquery.dotdotdot.js"></script>
+    <!-- slick-->
+    <script src="slick/slick.min.js"></script>
+    <!-- Bootstrap-->
+    <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="js/libs/jquery.actual.min.js"></script>
+    <!-- Валидация-->
+    <script src="js/libs/validate/jquery.validate.min.js"></script>
+    <script src="js/libs/jquery.maskedinput.min.js"></script>
+    <!-- main script-->
+    <script src="js/main/main.js?0.2.1"></script>
+    <!--if lte IE 9
+    link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
+    link(rel='stylesheet', href='ie9/css/style-ie9.css')
+    script(src='ie9/js/bootstrap-ie9.js')
+    -->
   </body>
 </html>
