--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.1" rel="stylesheet">
+    <link href="css/style.css?0.2.3" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -3140,6 +3140,7 @@
         </div>
       </div>
     </section>
+    <footer class="footer"></footer>
     <div class="upp">
       <div class="container">
         <div class="row">
@@ -3201,7 +3202,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.1"></script>
+    <script src="js/main/main.js?0.2.3"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
