--- a/others.html
+++ b/others.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.3" rel="stylesheet">
+    <link href="css/style.css?0.2.4" rel="stylesheet">
     <title>Формы, таблицы и другие элементы | ОМК</title>
   </head>
   <body>
@@ -842,7 +842,7 @@
                       <label class="form-label" for="formDepartment"><span>Подразделение</span></label>
                       <input class="form__input" id="formDepartment" type="text" placeholder="Введите наименование подразделения">
                     </div>
-                    <div class="form__box">
+                    <div class="form__box form__box_small">
                       <label class="form-label" for="formEmail"><span>Email</span></label>
                       <input class="form__input" id="formEmail" type="email" placeholder="Введите ваш Email">
                     </div>
@@ -1263,7 +1263,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.3"></script>
+    <script src="js/main/main.js?0.2.4"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
