--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.3" rel="stylesheet">
+    <link href="css/style.css?0.2.4" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -1146,8 +1146,8 @@
               <div class="card cardTwoThirds">
                 <div class="card-wrap cardTwoThirds-wrap">
                   <div class="cardTwoThirds__imgbox card__imgbox" style="background-image: url(img/news-twothirds-img-01.jpg);">
-                    <div class="card-warning-text">
-                      <p>Что-то пошло не так</p>
+                    <div class="card-succes-text">
+                      <p>Оценка "Хорошо!"</p>
                     </div>
                   </div>
                   <div class="card__content cardTwoThirds__content">
@@ -1208,8 +1208,8 @@
               <div class="card cardHalf">
                 <div class="card-wrap cardHalf-wrap">
                   <div class="cardHalf-imgbox card__imgbox" style="background-image: url(img/news-half-img-01.jpg);">
-                    <div class="card-warning-text">
-                      <p>Всё изменится!</p>
+                    <div class="card-average-text">
+                      <p>Оценка: Нормально!</p>
                     </div>
                   </div>
                   <div class="card__content cardHalf__content">
@@ -3202,7 +3202,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.3"></script>
+    <script src="js/main/main.js?0.2.4"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
