--- a/html-old/header-nav(old.headerNavSystem).html
+++ b/html-old/header-nav(old.headerNavSystem).html
@@ -1,5 +1,5 @@
 <nav class="header-nav">
-	<div id="headerNav" class="header-nav-wrap collapse show">
+	<div id="header-nav" class="header-nav-wrap collapse show">
 		<div class="row align-items-xl-center">
 			<div class="col-xl-1 align-self-xl-start">
 				<a href="#" class="header-nav__item">
@@ -64,9 +64,9 @@
 			<div class="col-xl-2 d-table">
 				<div class="header-nav-button-inn header-button-inn button-inn">
 					<div class="nav-more btn-group">
-						<!-- <button class="button header-button header-nav-button" data-nav-control="headerNavMore" data-hide="true">Ещё <i class="icon-arrow-down"></i></button> -->
+						<!-- <button class="button header-button header-nav-button" data-nav-control="header-navMore" data-hide="true">Ещё <i class="icon-arrow-down"></i></button> -->
 							<button 
-								id="headerNavMore" 
+								id="header-navMore" 
 								class="button header-button header-nav-button" 
 								type="button" 
 								data-toggle="dropdown" 
@@ -87,12 +87,12 @@
 						</ul>
 					</div>
 						
-					<button id="headerNavSettingControl" class="button header-button header-nav-button" type="button" data-toggle="collapse" data-target="#headerNavSetting" aria-expanded="false" aria-controls="headerNavSetting">Настройка</button>
+					<button id="header-navSettingControl" class="button header-button header-nav-button" type="button" data-toggle="collapse" data-target="#header-navSetting" aria-expanded="false" aria-controls="header-navSetting">Настройка</button>
 				</div>
 			</div>
 			<!-- /.col-xl-2 -->
 			<div class="col-xl-7 offset-xl-5">
-				<div id="headerNavSetting" class="nav-setting collapse">
+				<div id="header-navSetting" class="nav-setting collapse">
 					<h4 class="nav-setting__title">Для настройки вашего меню, выберите нужные иконки:</h4>
 					<div class="nav-setting__items">
 						<div id="sortable" class="nav-setting-wrap">
@@ -375,8 +375,8 @@
 
 						</div>
 						<div class="form-checkbox-button-wrap">
-							<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#headerNavSetting">Отмена</button>
-							<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#headerNavSetting">Применить</button>
+							<button type="reset" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Отмена</button>
+							<button type="submit" class="button form-setting-button" data-toggle="collapse" data-target="#header-navSetting">Применить</button>
 						</div>
 					</form>
 				</div>
