--- a/profile.html
+++ b/profile.html
@@ -819,8 +819,8 @@
                 </div>
               </div>
               <div class="cards">
-                <div class="card cardThird">
-                  <div class="card-wrap cardThird-wrap">
+                <div class="card card-third">
+                  <div class="card-wrap card-third-wrap">
                     <div class="card__imgbox card__imgbox_xl" style="background-image: url(img/photo-01.png);"></div>
                   </div>
                 </div>
