--- a/blocks.html
+++ b/blocks.html
@@ -832,8 +832,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="card cardThird">
-                  <div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-01.jpg);">
+                <div class="card card-third">
+                  <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-01.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
@@ -845,8 +845,8 @@
                     <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
-                <div class="card cardThird">
-                  <div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-02.jpg);">
+                <div class="card card-third">
+                  <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-02.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
@@ -879,8 +879,8 @@
                     <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
-                <div class="card cardThird">
-                  <div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-05.jpg);">
+                <div class="card card-third">
+                  <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-05.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
@@ -892,8 +892,8 @@
                     <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
-                <div class="card cardThird">
-                  <div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-06.jpg);">
+                <div class="card card-third">
+                  <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-06.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
@@ -914,23 +914,23 @@
                     </div>
                   </div>
                 </div>
-                <div class="card cardHalf">
-                  <div class="cardHalf-imgbox card__imgbox" style="background-image: url(img/block-img-03.jpg);">
+                <div class="card card-half">
+                  <div class="card-half-imgbox card__imgbox" style="background-image: url(img/block-img-03.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
                   </div>
-                  <div class="card__text cardHalf__text">
+                  <div class="card__text card-half__text">
                     <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
-                <div class="card cardHalf">
-                  <div class="cardHalf-imgbox card__imgbox" style="background-image: url(img/block-img-08.jpg);">
+                <div class="card card-half">
+                  <div class="card-half-imgbox card__imgbox" style="background-image: url(img/block-img-08.jpg);">
                     <div class="card-warning-text hide">
                       <p></p>
                     </div>
                   </div>
-                  <div class="card__text cardHalf__text">
+                  <div class="card__text card-half__text">
                     <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
@@ -1100,15 +1100,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card-slider cardThird-slider">
-                  <div class="card-wrap card-slider-wrap cardThird-slider-wrap">
-                    <div class="card-slider__item cardThird-slider__item">
-                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
+                <div class="card card-slider card-third-slider">
+                  <div class="card-wrap card-slider-wrap card-third-slider-wrap">
+                    <div class="card-slider__item card-third-slider__item">
+                      <div class="card-third-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
                         <div class="card-warning-text hide">
                           <p></p>
                         </div>
                       </div>
-                      <div class="card__content cardThird__content">
+                      <div class="card__content card-third__content">
                         <div class="tagbox">
                           <div class="tag">
                             <button class="button button-tag">Константинов Константин</button>
@@ -1118,17 +1118,17 @@
                             <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title cardThird__title"><a href="#">Как вам прошедший концерт?</a></div>
+                        <div class="card__title card-third__title"><a href="#">Как вам прошедший концерт?</a></div>
                         <div class="card-date"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
-                    <div class="card-slider__item cardThird-slider__item">
-                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
+                    <div class="card-slider__item card-third-slider__item">
+                      <div class="card-third-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
                         <div class="card-warning-text hide">
                           <p></p>
                         </div>
                       </div>
-                      <div class="card__content cardThird__content">
+                      <div class="card__content card-third__content">
                         <div class="tagbox">
                           <div class="tag">
                             <button class="button button-tag">Мацинова Елена</button>
@@ -1138,17 +1138,17 @@
                             <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title cardThird__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
+                        <div class="card__title card-third__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
                         <div class="card-date"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
-                    <div class="card-slider__item cardThird-slider__item">
-                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-03.jpg);">
+                    <div class="card-slider__item card-third-slider__item">
+                      <div class="card-third-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-03.jpg);">
                         <div class="card-warning-text hide">
                           <p></p>
                         </div>
                       </div>
-                      <div class="card__content cardThird__content">
+                      <div class="card__content card-third__content">
                         <div class="tagbox">
                           <div class="tag">
                             <button class="button button-tag">Андреевский Андрей</button>
@@ -1158,17 +1158,17 @@
                             <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title cardThird__title"><a href="#">После работы надо обязательно поработать ра...</a></div>
+                        <div class="card__title card-third__title"><a href="#">После работы надо обязательно поработать ра...</a></div>
                         <div class="card-date"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
-                    <div class="card-slider__item cardThird-slider__item">
-                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
+                    <div class="card-slider__item card-third-slider__item">
+                      <div class="card-third-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
                         <div class="card-warning-text hide">
                           <p></p>
                         </div>
                       </div>
-                      <div class="card__content cardThird__content">
+                      <div class="card__content card-third__content">
                         <div class="tagbox">
                           <div class="tag">
                             <button class="button button-tag">Мацинова Елена</button>
@@ -1178,17 +1178,17 @@
                             <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title cardThird__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
+                        <div class="card__title card-third__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
                         <div class="card-date"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
-                    <div class="card-slider__item cardThird-slider__item">
-                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
+                    <div class="card-slider__item card-third-slider__item">
+                      <div class="card-third-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
                         <div class="card-warning-text hide">
                           <p></p>
                         </div>
                       </div>
-                      <div class="card__content cardThird__content">
+                      <div class="card__content card-third__content">
                         <div class="tagbox">
                           <div class="tag">
                             <button class="button button-tag">Андреевский Андрей</button>
@@ -1198,7 +1198,7 @@
                             <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title cardThird__title"><a href="#">Как вам прошедший концерт?</a></div>
+                        <div class="card__title card-third__title"><a href="#">Как вам прошедший концерт?</a></div>
                         <div class="card-date"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
