--- a/html-old/blocks.html
+++ b/html-old/blocks.html
@@ -1260,8 +1260,8 @@
 								<div class="content-titlebox"><h2>Новые технологии на ВМЗ в 2019</h2></div>
 							</div>
 						</div>
-						<div class="card cardThird">					
-							<div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-01.jpg);">
+						<div class="card card-third">					
+							<div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-01.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
@@ -1275,8 +1275,8 @@
 								<a href="#" class="button card__more">Читать далее</a>
 							</div>
 						</div>
-						<div class="card cardThird">					
-							<div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-02.jpg);">
+						<div class="card card-third">					
+							<div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-02.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
@@ -1311,8 +1311,8 @@
 								<a href="#" class="button card__more">Читать далее</a>
 							</div>
 						</div>
-						<div class="card cardThird">					
-							<div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-05.jpg);">
+						<div class="card card-third">					
+							<div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-05.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
@@ -1327,8 +1327,8 @@
 								<a href="#" class="button card__more">Читать далее</a>
 							</div>
 						</div>
-						<div class="card cardThird">					
-							<div class="cardThird__imgbox card__imgbox" style="background-image: url(img/block-img-06.jpg);">
+						<div class="card card-third">					
+							<div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-06.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
@@ -1346,24 +1346,24 @@
 								<div class="content-titlebox"><h2>Новые технологии на ВМЗ в 2019</h2></div>
 							</div>
 						</div>					
-						<div class="card cardHalf">
-							<div class="cardHalf-imgbox card__imgbox" style="background-image: url(img/block-img-03.jpg);">
+						<div class="card card-half">
+							<div class="card-half-imgbox card__imgbox" style="background-image: url(img/block-img-03.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
 							</div>
-							<div class="card__text cardHalf__text">
+							<div class="card__text card-half__text">
 								<p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.</p>
 								<a href="#" class="button card__more">Читать далее</a>
 							</div>
 						</div>
-						<div class="card cardHalf">
-							<div class="cardHalf-imgbox card__imgbox" style="background-image: url(img/block-img-08.jpg);">
+						<div class="card card-half">
+							<div class="card-half-imgbox card__imgbox" style="background-image: url(img/block-img-08.jpg);">
 								<div class="card-warning-text hide">
 									<p></p>
 								</div>
 							</div>
-							<div class="card__text cardHalf__text">
+							<div class="card__text card-half__text">
 								<p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления</p>
 								<a href="#" class="button card__more">Читать далее</a>
 							</div>
