--- a/gallery.html
+++ b/gallery.html
@@ -867,7 +867,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -928,7 +928,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -994,7 +994,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1043,14 +1043,14 @@
                   </div>
                 </div>
                 <div class="cards comments-dark">
-                  <div class="card card_slim">
+                  <div class="card margin-bottom-15">
                     <div class="content-title">
                       <div class="content-titlebox">
                         <h2>Комментарии к "Новые технологии на ВМЗ в 2019"</h2>
                       </div>
                     </div>
                   </div>
-                  <div class="card card_slim" id="allComentators">
+                  <div class="card margin-bottom-15" id="allComentators">
                     <div class="comment" id="commentator_01">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
@@ -1201,7 +1201,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1223,14 +1223,14 @@
                     </div>
                   </div>
                   <div class="cards comments-dark">
-                    <div class="card card_slim">
+                    <div class="card margin-bottom-15">
                       <div class="content-title">
                         <div class="content-titlebox">
                           <h2>Комментарии к "Новые технологии на ВМЗ в 2019"</h2>
                         </div>
                       </div>
                     </div>
-                    <div class="card card_slim" id="allComentators">
+                    <div class="card margin-bottom-15" id="allComentators">
                       <div class="comment" id="commentator_01">
                         <div class="comment-box">
                           <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
@@ -1396,7 +1396,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1437,7 +1437,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1484,7 +1484,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1534,7 +1534,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -1614,7 +1614,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
