--- a/others.html
+++ b/others.html
@@ -868,7 +868,7 @@
                   </div>
                 </form>
               </div>
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox">
                     <h2>Таблица наименований регулярных мероприятий</h2>
@@ -918,7 +918,7 @@
                   </tbody>
                 </table>
               </div>
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox">
                     <h2>Другие стили таблиц</h2>
@@ -1054,7 +1054,7 @@
                   </tbody>
                 </table>
               </div>
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox_dark content-titlebox_collapse" data-toggle="collapse" data-target="#articleCollapse01">
                     <h4>Это заголовок-спойлер и под ним скрывается текстовый блок или галерея</h4>
@@ -1087,7 +1087,7 @@
                   </div>
                 </div>
               </article>
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox_dark content-titlebox_collapse" data-toggle="collapse" data-target="#articleCollapseSlider01">
                     <h4>Контент-слайдер - это многостраничный спойлер</h4>
