--- a/post.html
+++ b/post.html
@@ -814,7 +814,7 @@
               <div class="card card-full-head_special"></div>
               <div class="cards">
                 <article class="article">
-                  <div class="card card_slim">
+                  <div class="card margin-bottom-15">
                     <div class="article-imgwrap article-imgwrap_slim">
                       <div class="article-imgbox article-imgbox_head" style="background-image: url(img/post-img-01.jpg);"></div>
                     </div>
@@ -828,7 +828,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card card_slim">
+                  <div class="card margin-bottom-15">
                     <div class="content-title">
                       <div class="content-titlebox">
                         <h3>Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы</h3>
@@ -884,14 +884,14 @@
               <div class="card">
                 <hr class="card-hr">
               </div>
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox">
                     <h2>Комментарии</h2>
                   </div>
                 </div>
               </div>
-              <div class="card card_slim" id="allComentators">
+              <div class="card margin-bottom-15" id="allComentators">
                 <div class="comment" id="commentator_01">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
