--- a/profile.html
+++ b/profile.html
@@ -811,7 +811,7 @@
           </div>
           <div class="col-xl-9">
             <div class="content-group">
-              <div class="card card_slim">
+              <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox">
                     <h1>Константин Александрович Константинопольский</h1>
