--- a/video.html
+++ b/video.html
@@ -843,7 +843,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -878,7 +878,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
@@ -925,7 +925,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card card_slim">
+                <div class="card margin-bottom-15">
                   <div class="tagbox">
                     <div class="tag">
                       <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
